--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.24",
     "lucide-react": "^0.364.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ionicons": "^1.5.7",
+    "react-intersection-observer": "^9.8.1",
+    "react-ionicons": "^1.4.6",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
